pyproject.toml split into .mypy.ini, .ruff.toml

--- a/.ruff.toml
+++ b/.ruff.toml
@@ -1,17 +1,13 @@
-[tool.mypy]
-disable_error_code = ["import-untyped"]
-
-[tool.ruff]
 exclude = [
   ".git",
   "user-config.py",
   ".venv",
 ]
 
-[tool.ruff.lint]
+[lint]
 fixable = ["ALL"]
 
-[tool.ruff.format]
+[format]
 quote-style = "double"
 indent-style = "space"
 skip-magic-trailing-comma = false
